--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@ crashlytics-build.properties
 
 # Merging Conflict:
 /Assets/Fonts/TdmexBitmap-PKBd SDF.asset
+Assets/Fonts/TdmexBitmap-PKBd SDF.asset
